WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87925
[V8] Expando properties on attribute nodes disappear
https://bugs.webkit.org/show_bug.cgi?id=87925
Summary
[V8] Expando properties on attribute nodes disappear
Dominic Cooney
Reported
2012-05-30 22:01:19 PDT
Created
attachment 144983
[details]
Repro. Must run Chrome with --js-flags=--expose_gc. Object grouping for attribute nodes is incorrect. See the attached repro. It should print "magic", "magic" but because the attribute node wrapper is collected prematurely, it prints "magic", "undefined".
Attachments
Repro. Must run Chrome with --js-flags=--expose_gc.
(533 bytes, text/html)
2012-05-30 22:01 PDT
,
Dominic Cooney
no flags
Details
Patch
(5.15 KB, patch)
2012-05-31 21:46 PDT
,
Dominic Cooney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominic Cooney
Comment 1
2012-05-31 21:46:29 PDT
Created
attachment 145208
[details]
Patch
Dominic Cooney
Comment 2
2012-05-31 21:47:19 PDT
Comment on
attachment 145208
[details]
Patch Filed
bug 88045
for JSC. It seems the same bug exists in JSC bindings.
Adam Barth
Comment 3
2012-05-31 22:13:31 PDT
Comment on
attachment 145208
[details]
Patch LGTM. You might want to run this patch by haraken before landing.
Kentaro Hara
Comment 4
2012-05-31 22:26:59 PDT
Comment on
attachment 145208
[details]
Patch LGTM from me too
WebKit Review Bot
Comment 5
2012-05-31 23:37:22 PDT
Comment on
attachment 145208
[details]
Patch Clearing flags on attachment: 145208 Committed
r119196
: <
http://trac.webkit.org/changeset/119196
>
WebKit Review Bot
Comment 6
2012-05-31 23:37:30 PDT
All reviewed patches have been landed. Closing bug.
János Badics
Comment 7
2012-06-01 01:25:32 PDT
A newly added test (fast/dom/gc-attribute-node.html) fails on Qt, GTK and EFL 64 bit since
r119196
. I will skip this test until the problem is solved.
https://bugs.webkit.org/show_bug.cgi?id=88062
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug