[V8] Expando properties on attribute nodes disappear https://bugs.webkit.org/show_bug.cgi?id=87925

Source/WebCore:

Reviewed by Adam Barth.

Test: fast/dom/gc-attribute-node.html

* bindings/v8/V8GCController.cpp:
(WebCore::calculateGroupId): Group attributes like other nodes.

LayoutTests:

Checks in a failing result for JSC; see
<https://bugs.webkit.org/show_bug.cgi?id=88045>.

Reviewed by Adam Barth.

* fast/dom/gc-attribute-node-expected.txt: Added.
* fast/dom/gc-attribute-node.html: Added.
* platform/chromium/fast/dom/gc-attribute-node-expected.txt: Added.
* platform/mac/fast/dom/gc-attribute-node-expected.txt: Added.


Canonical link: https://commits.webkit.org/105876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119196 268f45cc-cd09-0410-ab3c-d52691b4dbfc